ISSUE-76 - atlas-repository-git - Move atlas-repository-git